# alere2

./: .gitignore  Cargo.toml  Makefile  Makefile.toml
alere_lib/: Cargo.toml  TODO
alere_lib/src/: account_categories.rs  account_kinds.rs  accounts.rs  commodities.rs  errors.rs  formatters.rs  hledger.rs  importers.rs  institutions.rs  intervals.rs  kmymoney.rs  lib.rs  market_prices.rs  metrics.rs  multi_values.rs  networth.rs  payees.rs  perf.rs  price_sources.rs  prices.rs  qif.rs  repositories.rs  stats.rs  times.rs  transactions.rs  tree_keys.rs  trees.rs  utils.rs
cli/: Cargo.toml
cli/src/: accounts_view.rs  args.rs  global_settings.rs  history_view.rs  ledger_view.rs  main.rs  metrics_view.rs  networth.rs  networth_view.rs  perfs_view.rs  stats_view.rs  tables.rs  update_view.rs
kmy_editor/: Cargo.toml
kmy_editor/src/: lib.rs  test_schema.sql
rust_intervals/: Cargo.toml
rust_intervals/src/: intervals.rs  lib.rs  nothing_between.rs  tests.rs
stock_importer/: Cargo.toml
stock_importer/examples/: fetch_prices.rs
stock_importer/src/: lib.rs
