[package]
name = "alere_lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
kmymoney = [ "dep:sqlx" ]

[dependencies]
bitmask = "0.5.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.6.1"
thiserror = "1.0.50"
futures = "0.3"
log = "0.4"
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
# num = "0.4"
# num-derive = "0.3"
# num-traits = "0.2"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", optional = true, features = [ "runtime-async-std", "sqlite", "macros", "chrono" ]}
