[package]
name = "alere_lib"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[features]
default = []
kmymoney = [ "dep:sqlx" ]

[dependencies]
anyhow = { workspace = true }
bisection = "0.1.0"
bitmask = "0.5.0"
chrono = { workspace = true }
chrono-tz = { workspace = true }
thiserror = "1.0.50"
futures = { workspace = true }
log = "0.4"
rust_decimal = { workspace = true }
rust_decimal_macros = "1.35"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", optional = true, features = [ "runtime-async-std", "sqlite", "macros", "chrono" ]}
