[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alere_lib = { path = "../alere_lib", features = [ "kmymoney" ] }
anyhow = { workspace = true }
chrono = { workspace = true }
console = "0.15.8"
futures = { workspace = true }
indicatif = "0.17.8"
itertools = { workspace = true }
rust_decimal = { workspace = true }
