[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alere_lib = { path = "../alere_lib", features = [ "kmymoney" ] }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete_command = "0.6.1"
console = "0.15.8"
env_logger = "0.11"
futures = { workspace = true }
indicatif = "0.17.8"
indicatif-log-bridge = "0.2"
itertools = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
shlex = "1.3.0"
tabled = "0.17"
terminal_size = "0.4"

[dev-dependencies]
kmy_editor = { path = "../kmy_editor" }

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
