[package]
authors = ["Emmanuel Briot <briot.emmanuel@gmail.com>"]
description = "Implements generic intervals with any combination of open, closed or infinite bounds, along with operations like intersection, convex hull, union, difference,..."
repository = "..."
homepage = "..."
readme = "README.md"
name = "rust_intervals"
version = "0.1.0"
edition = "2021"
licence = "MIT"
licence-file = "LICENCE"
keywords = ["intervals", "open-closed", "ranges", "intersection", "convex hull"]

[dependencies]
chrono = { version = "0.4.24", optional = true }
